# restir-vpl

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  camera.cpp  camera.h  camera.hpp  camera2.cpp  camera2.h  camera2.hpp  color.h  constants.hpp  geometry.cpp  geometry.hpp  ground_truth_renderer.hpp  hit_info.h  hit_info.hpp  image_writer.cpp  image_writer.h  image_writer.hpp  interval.cpp  interval.hpp  light.cpp  light.hpp  light_sampler.cpp  light_sampler.h  light_sampler.hpp  main.cpp  material.cpp  material.h  material.hpp  photon.cpp  photon.hpp  ray.cpp  ray.h  ray.hpp  render.cpp  render.hpp  restir.cpp  restir.hpp  (+23 more)
evaluation/: rmse.py  variance.py
evaluation/camera_positions/: camera_position_cornell.txt  camera_position_room.txt  camera_position_sahur.txt
images/cornell_box/: debug.pfm.xmp  durations.md  low_vpl_count.pfm.xmp  reference.pfm.xmp  restir_fireflies.pfm.xmp  ris_fireflies.pfm.xmp
images/cornell_box/pt/: accumulate_PT_frame2000.pfm.xmp
images/cornell_box/restir_500/: ReSTIR_frame0033.pfm.xmp  ReSTIR_frame0481.pfm.xmp  accumulate_ReSTIR_frame0500.pfm.xmp
images/cornell_box/ris_500/: RIS_frame0033.pfm.xmp  RIS_frame0124.pfm.xmp  accumulate_RIS_frame0500.pfm.xmp
images/cornell_box/uniform_500/: Uniform_frame0033.pfm.xmp  accumulate_Uniform_frame0500.pfm.xmp
images/living_room/: durations.md  reference.pfm.xmp
images/living_room/restir_40/: ReSTIR_frame0033.pfm.xmp
images/living_room/ris_40/: RIS_frame0033.pfm.xmp
images/living_room/uniform_40/: Uniform_frame0033.pfm.xmp
images/sahur/: durations.md  reference.pfm.xmp
images/sahur/restir_40/: ReSTIR_frame0033.pfm.xmp  accumulate_ReSTIR_frame0040.pfm.xmp
images/sahur/ris_40/: RIS_frame0033.pfm.xmp  accumulate_RIS_frame0040.pfm.xmp
images/sahur/uniform_40/: Uniform_frame0033.pfm.xmp
main.dSYM/Contents/Resources/DWARF/: main
objects/: Gauntlet.mtl  bigCubeLight.mtl  bistro_lights.mtl  bistro_normal.mtl  blueMonkey_rotated.mtl  brownMonkey.mtl  cornell-box.mtl  many_lights_scene.mtl  modern_living_room.mtl  monkeyLightInOne.mtl  multiple_color_lights.mtl  pineapple2.mtl  platform.mtl  sahur.mtl  scene_lights.mtl  scene_without_lights.mtl  test.mtl  test2.mtl  twoBigCubeLights.mtl  whiteMonkey_rotated.mtl
